<resources>
    <string name="app_name">Real Estate Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyC8ss3iAuvyEXqnHVTpfSCCcn_sUQ7tQMo</string>
    <string name="save">Save</string>
    <string name="restore">Restore</string>
    <string name="detailed_new">New</string>
    <string name="add_photo">Add photo</string>
    <string name="unknown" />
    <string name="free">free</string>
    <string name="display_modify">Display/Modify existing property (%d)</string>
    <string name="modify">Modify new property</string>
    <string name="detailed_property_address">Address</string>
    <string name="detailed_property_type">Type</string>
    <string name="detailed_property_surface">Surface</string>
    <string name="detailed_property_price">Price</string>
    <string name="detailed_property_rooms_number">Rooms number</string>
    <string name="detailed_property_description">Description</string>
    <string name="detailed_property_status">Status (free or sold)</string>
    <string name="detailed_property_date_begin">Date begin</string>
    <string name="detailed_property_date_end">Sold date</string>
    <string name="detailed_property_real_estate_agent">Real estate agent</string>
    <string name="detailed_property_points_of_interest">Points of interest</string>
    <string name="picture_title">Picture title</string>
    <string name="property_image">Property image</string>
    <string name="photo">Photo</string>
    <string name="property_saved">Property saved</string>
    <string name="property_successfully_saved">The property at %s has been successfully updated or added</string>
    <string name="map">Map</string>
    <string name="take_photo">Take photo</string>
    <string name="filter_min_price">Minimal price</string>
    <string name="filter_max_price">Maximal price</string>
    <string name="filter">filter</string>
    <string name="filter_clear">Clear filters</string>
    <string name="filter_min_surface">Minimal surface</string>
    <string name="filter_max_surface">Maximal surface</string>
    <string name="filter_min_number_photos">Minimal number of photos</string>
    <string name="filter_sector">Sector</string>
    <string name="filter_date_begin">Date since for sale (jj/mm/yyyy)</string>
    <string name="filter_date_end">Date since sold (jj/mm/yyyy)</string>
    <string name="filter_point_of_interest">Point of interest</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="clear">Clear</string>
    <string name="enter_value">Enter value</string>
    <string name="confirm_suppress_photo">Confirm photo suppression ?</string>
    <string name="loan_period_in_years">Loan period (in years) ?</string>
    <string name="fix_rate_in_percents">Fix rate (in percents) ?</string>
    <string name="initial_contribution">Initial contribution ?</string>
    <string name="real_estate_price">Real estate price ?</string>
    <string name="financing_simulation">Financing simulation</string>
    <string name="monthly_payment">Monthly payment = %d</string>
    <string name="bad_input">Bad input</string>
    <string name="unknown2">unknown</string>
</resources>
